--- a/dailyExchange/dailyExchange/View/storyboards/Base.lproj/Main.storyboard
+++ b/dailyExchange/dailyExchange/View/storyboards/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mvo-BZ-JBE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="mvo-BZ-JBE">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -18,6 +18,12 @@
                     <view key="view" contentMode="scaleToFill" id="4tP-Yp-OPJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <userGuides>
+                            <userLayoutGuide location="332" affinity="minY"/>
+                            <userLayoutGuide location="333" affinity="minY"/>
+                            <userLayoutGuide location="333" affinity="minY"/>
+                            <userLayoutGuide location="333" affinity="minY"/>
+                        </userGuides>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poo-YM-RjR">
                                 <rect key="frame" x="163" y="588" width="48" height="30"/>
@@ -281,23 +287,6 @@
             </objects>
             <point key="canvasLocation" x="1405.5999999999999" y="131.78410794602701"/>
         </scene>
-        <!--Chart-->
-        <scene sceneID="AbU-al-ITO">
-            <objects>
-                <viewController id="yQU-AS-mJ3" customClass="ChartViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="LfV-v5-1IG">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="3Vb-ly-Xci"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Chart" id="MVg-UU-qJc" userLabel="Chart"/>
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="uI2-aX-XDa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="558" y="864"/>
-        </scene>
         <!--Top Level Table View Controller-->
         <scene sceneID="u2m-b8-Ldt">
             <objects>
@@ -309,7 +298,6 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="yQU-AS-mJ3" kind="relationship" relationship="viewControllers" id="GPr-M0-0Hd"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="VgZ-Vm-aDp"/>
                         <segue destination="UfY-qF-KgV" kind="relationship" relationship="viewControllers" id="ifi-8W-0I8"/>
                     </connections>
