Fix bug, Enable Secure Text Entry for password text fields

--- a/dailyExchange/dailyExchange/View/storyboards/Login.storyboard
+++ b/dailyExchange/dailyExchange/View/storyboards/Login.storyboard
@@ -46,7 +46,7 @@
                                         <rect key="frame" x="8" y="46" width="265.5" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" textContentType="password"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlB-uh-Gp8">
                                         <rect key="frame" x="8" y="88" width="265.5" height="30"/>
@@ -125,7 +125,7 @@
                                         <rect key="frame" x="8" y="46" width="265.5" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" textContentType="password"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wu1-8j-knV">
                                         <rect key="frame" x="8" y="88" width="265.5" height="30"/>
