--- a/dailyExchange/dailyExchange/View/storyboards/Base.lproj/Main.storyboard
+++ b/dailyExchange/dailyExchange/View/storyboards/Base.lproj/Main.storyboard
@@ -14,15 +14,16 @@
         <!--Settings-->
         <scene sceneID="dbj-Ja-WKj">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IHB-bc-ZL5" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="UfY-qF-KgV" customClass="SettingsViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4tP-Yp-OPJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <userGuides>
+                            <userLayoutGuide location="258" affinity="minY"/>
+                            <userLayoutGuide location="320" affinity="minY"/>
+                            <userLayoutGuide location="162" affinity="minY"/>
                             <userLayoutGuide location="332" affinity="minY"/>
-                            <userLayoutGuide location="333" affinity="minY"/>
-                            <userLayoutGuide location="333" affinity="minY"/>
-                            <userLayoutGuide location="333" affinity="minY"/>
                         </userGuides>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poo-YM-RjR">
@@ -32,20 +33,119 @@
                                     <action selector="logoutTapped:" destination="UfY-qF-KgV" eventType="touchUpInside" id="eSw-99-AiG"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2gh-1Z-ObX">
+                                <rect key="frame" x="147" y="476" width="81" height="30"/>
+                                <state key="normal" title="Contact Us "/>
+                                <connections>
+                                    <segue destination="HjF-qf-JCY" kind="presentation" id="Ipm-N9-2Wk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="poo-YM-RjR" firstAttribute="centerX" secondItem="8Nq-NG-QMz" secondAttribute="centerX" id="Z8k-pM-YEr"/>
                             <constraint firstItem="8Nq-NG-QMz" firstAttribute="bottom" secondItem="poo-YM-RjR" secondAttribute="bottom" id="c9L-JY-3W0"/>
+                            <constraint firstItem="poo-YM-RjR" firstAttribute="top" secondItem="2gh-1Z-ObX" secondAttribute="bottom" constant="82" id="iFK-ls-97x"/>
+                            <constraint firstItem="2gh-1Z-ObX" firstAttribute="centerX" secondItem="8Nq-NG-QMz" secondAttribute="centerX" id="sKs-A5-qCj"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="8Nq-NG-QMz"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" id="rFl-9D-wmA" userLabel="Settings"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IHB-bc-ZL5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="673" y="-543"/>
+        </scene>
+        <!--Contact Us View Controller-->
+        <scene sceneID="N5i-4h-gzf">
+            <objects>
+                <viewController id="HjF-qf-JCY" customClass="ContactUsViewController" customModule="dailyExchange" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8Kc-lI-iHr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Contact Us" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I4I-ns-1Ht">
+                                <rect key="frame" x="144" y="20" width="86" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="toM-QF-1SF">
+                                <rect key="frame" x="0.0" y="41" width="375" height="222.5"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="How can we help? " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="O9a-oh-0z9">
+                                        <rect key="frame" x="2" y="2" width="371" height="218.5"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="O9a-oh-0z9" secondAttribute="bottom" constant="2" id="OQF-xR-axF"/>
+                                    <constraint firstItem="O9a-oh-0z9" firstAttribute="top" secondItem="toM-QF-1SF" secondAttribute="top" constant="2" id="V0K-M2-nnA"/>
+                                    <constraint firstAttribute="trailing" secondItem="O9a-oh-0z9" secondAttribute="trailing" constant="2" id="vyN-P2-njK"/>
+                                    <constraint firstItem="O9a-oh-0z9" firstAttribute="leading" secondItem="toM-QF-1SF" secondAttribute="leading" constant="2" id="yZF-5K-j1W"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e6b-SS-8Eb">
+                                <rect key="frame" x="101" y="271.5" width="48" height="30"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonTapped:" destination="HjF-qf-JCY" eventType="touchUpInside" id="oOm-nh-pxV"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="adS-Pz-cpC">
+                                <rect key="frame" x="177" y="501" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEs-eE-oil">
+                                <rect key="frame" x="232" y="271.5" width="36" height="30"/>
+                                <state key="normal" title="Send"/>
+                                <connections>
+                                    <action selector="sendButtonTapped:" destination="HjF-qf-JCY" eventType="touchUpInside" id="cSg-FG-xSC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="toM-QF-1SF" firstAttribute="height" secondItem="8Kc-lI-iHr" secondAttribute="height" multiplier="1:3" id="03i-WJ-eI1"/>
+                            <constraint firstItem="e6b-SS-8Eb" firstAttribute="baseline" secondItem="rEs-eE-oil" secondAttribute="baseline" id="218-2F-Vnd"/>
+                            <constraint firstItem="e6b-SS-8Eb" firstAttribute="top" secondItem="toM-QF-1SF" secondAttribute="bottom" constant="8" id="DGh-Ca-kP5"/>
+                            <constraint firstItem="I4I-ns-1Ht" firstAttribute="centerX" secondItem="9xg-zK-y6w" secondAttribute="centerX" id="EA2-nH-ofZ"/>
+                            <constraint firstItem="I4I-ns-1Ht" firstAttribute="top" secondItem="9xg-zK-y6w" secondAttribute="top" id="SND-7u-16S"/>
+                            <constraint firstItem="toM-QF-1SF" firstAttribute="leading" secondItem="9xg-zK-y6w" secondAttribute="leading" id="VrE-iz-Y9T"/>
+                            <constraint firstItem="e6b-SS-8Eb" firstAttribute="centerX" secondItem="9xg-zK-y6w" secondAttribute="centerX" multiplier="2:3" id="bPq-GQ-VSq"/>
+                            <constraint firstItem="toM-QF-1SF" firstAttribute="trailing" secondItem="9xg-zK-y6w" secondAttribute="trailing" id="fRf-v8-16a"/>
+                            <constraint firstItem="rEs-eE-oil" firstAttribute="centerX" secondItem="9xg-zK-y6w" secondAttribute="centerX" multiplier="4:3" id="iMT-OT-6WO"/>
+                            <constraint firstItem="toM-QF-1SF" firstAttribute="top" secondItem="I4I-ns-1Ht" secondAttribute="bottom" id="yRb-h9-qwf"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9xg-zK-y6w"/>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Oq4-KX-u3w" appends="YES" id="auK-id-R2j"/>
+                        </connections>
+                    </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="adS-Pz-cpC" id="2aX-oq-2pR"/>
+                        <outlet property="textView" destination="O9a-oh-0z9" id="B3c-cH-myr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K0q-hm-mGy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Oq4-KX-u3w">
+                    <connections>
+                        <action selector="backgroundTapped:" destination="HjF-qf-JCY" id="6NU-sN-mj4"/>
+                    </connections>
+                </tapGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="1360.8" y="-537.48125937031489"/>
         </scene>
         <!--$-->
         <scene sceneID="tne-QT-ifu">
